tests/fail/inferred_variable_nil.tig
let
    var a := "20"
    var b := nil
in
    a := "a";
    a
end
