tests/fail/inferred_variable_nil.err
Semantic Error: Invalid nil expression assigned to a inferred type variable at line 3.
